--- a/Snackapp/app/src/main/res/values/strings.xml
+++ b/Snackapp/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_route">Route</string>
+    <string name="Route">Route</string>
+    <string name="Info">Info</string>
 </resources>
